--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "react-e-commerce-vendas",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.x"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.15.3",
     "node": "^14.4.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
