--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3"
   },
+  "devDependencies": {
+    "react-scripts": "3.0.0"
+  },
+  "resolutions": {
+    "babel-jest": "24.7.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
